@@ -3,4 +3,4 @@
 template <class T = void> struct A { };
 
 A a{};
-
+A a2;
